service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  labels:
    app.kubernetes.io/name: kubeflow
    app.kubernetes.io/component: mlflow-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app.kubernetes.io/name: kubeflow
    app.kubernetes.io/component: mlflow-service
